javaDSL/src/test/resources/typeSystemTestModels/valid/classes/ClassCanOnlyExtendClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

import java.util.ArrayList;

public abstract class ClassCanOnlyExtendClass extends ArrayList {

}
