javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Serr.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.io.InputStream;
import java.io.Serializable;

public class Serr extends InputStream implements Serializable {


}
